Align navbar layout on the different pages

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -57,9 +57,9 @@
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <div class="row">
+        <div class="row ml-0">
             <!-- Item 1: Link to 'players' page and game name -->
-            <div class="col-1 col-lg-3 d-none d-md-inline-block" style="overflow: hidden;">
+            <div class="col-1 col-lg-3 d-none d-md-inline-block pl-0" style="overflow: hidden;">
                 <p class="navbar-brand fix-padding mb-0"><a class="nav-action add-game-id" href="players.html"><span
                     class="oi oi-arrow-thick-left mr-4" aria-hidden="true" style="position: relative; top: 3px;"
                     ></span></a><span id="gameName1" class="d-none d-lg-inline-block"></span></p>
@@ -113,7 +113,7 @@
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
             <!-- Item 6: Language -->
-            <div class="col-1 d-none d-md-inline-block">
+            <div class="col-1 d-none d-md-inline-block px-0">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link fix-padding dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button" data-toggle="dropdown"
@@ -123,7 +123,7 @@
                 </ul>
             </div>
             <!-- Item 7: Menu for small screens -->
-            <div class="col-1 d-inline-block d-md-none">
+            <div class="col-1 d-inline-block d-md-none px-0">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button" data-toggle="dropdown"
