--- a/resources/players.html
+++ b/resources/players.html
@@ -34,16 +34,24 @@
 
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
-    <p class="navbar-brand mb-0"><a href="index.html"><span class="oi oi-arrow-thick-left mr-4"
-        aria-hidden="true" style="position: relative; top: 3px;"></span></a><span id="gameName"></span></p>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
-        </li>
-    </ul>
+    <div class="container">
+        <div class="row ml-0">
+            <div class="col-8 px-0">
+                <p class="navbar-brand mb-0"><a href="index.html"><span class="oi oi-arrow-thick-left mr-4"
+                   aria-hidden="true" style="position: relative; top: 3px;"></span></a><span id="gameName"></span></p>
+            </div>
+            <div class="col-4 px-0">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarLangDropdownLabel"
+                             id="otherLanguageFlags"></div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </nav>
     
 <!-- List of players -->
