--- a/resources/cards.html
+++ b/resources/cards.html
@@ -117,19 +117,8 @@
                     aria-hidden="true"></span><span class="d-none d-lg-inline-block"
                     data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
-            <!-- Item 6: Language -->
-            <div class="col-1 d-none d-md-inline-block px-0">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link fix-padding dropdown-toggle" href="#" id="navbarLangDropdownLabel"
-                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarLangDropdownLabel"
-                            id="otherLanguageFlags"></div>
-                    </li>
-                </ul>
-            </div>
-            <!-- Item 7: Menu for small screens -->
-            <div class="col-1 d-inline-block d-md-none px-0">
+            <!-- Item 6: Drop-down menu and language -->
+            <div class="col-1 px-0">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button"
@@ -140,7 +129,7 @@
                             <p class="text-muted mx-2 my-0" id="variantName"></p>
                             <!-- TODO add option choices like on 'games' page -->
                             <div class="dropdown-divider"></div>
-                            <div id="otherLanguageFlags2"></div>
+                            <div id="otherLanguageFlags"></div>
                             <a class="nav-link" href="index.html"><span class="oi oi-account-logout mx-2"
                                 aria-hidden="true"></span><span data-l10n-id="cards-navbar-games"></span></a>
                         </div>
