Add rule option descriptor to game info on 'cards' page

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -127,7 +127,7 @@
                         <div class="dropdown-menu dropdown-menu-right">
                             <p class="navbar-brand mx-2 my-0" id="gameName2"></p>
                             <p class="text-muted mx-2 my-0" id="variantName"></p>
-                            <!-- TODO add option choices like on 'games' page -->
+                            <p class="text-info mx-2 my-0" id="variantOptions"></p>
                             <div class="dropdown-divider"></div>
                             <div id="otherLanguageFlags"></div>
                             <a class="nav-link" href="index.html"><span class="oi oi-account-logout mx-2"
