Make filter icon adjust to filter state on 'cards' page

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -106,9 +106,10 @@
             <!-- Item 4: Filter -->
             <div class="col-1">
                 <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"
-                    onclick="CivBuddy.buttonClick(this, 'cards', 'filter')"><span
-                    class="oi oi-eye mr-2" aria-hidden="true"></span><span class="d-none d-lg-inline-block"
-                    data-l10n-id="cards-navbar-filter"></span></a></p>
+                    onclick="CivBuddy.buttonClick(this, 'cards', 'filter')"><img src="img/eye-active.svg"
+                    class="inline-svg mr-2 navbar-icon-eye" id="eye-open"><img src="img/eye-inactive.svg"
+                    class="inline-svg mr-2 navbar-icon-eye d-none" id="eye-closed"><span
+                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-filter"></span></a></p>
             </div>
             <!-- Item 5: Buy -->
             <div class="col-2 col-md-1">
