Enable funds icon on 'cards' page to change color on hover

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -209,9 +209,8 @@
                     data-l10n-args='{"fundsCurrent": 30, "fundsAvailable": 120}'></p>
             </div>
             <div class="col-1 funds-icon">
-                <!-- TODO icon does not change color -->
                 <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, 'cards', 'funds')"
-                    ><img src="img/funds.svg" alt="Funds"></a> <!-- class="inline-svg" -->
+                    ><img class="inline-svg" src="img/funds.svg" alt="Funds"></a>
             </div>
         </div>
     </div>
