--- a/resources/index.html
+++ b/resources/index.html
@@ -63,6 +63,9 @@
                             <a class="nav-link text-danger" href="#"
                                onclick="CivBuddy.buttonClick(this, 'games', 'purge')"><span class="oi oi-warning mx-2"
                                aria-hidden="true"></span><span data-l10n-id="games-navbar-purge"></span></a>
+                            <div class="dropdown-divider"></div>
+                            <p class="text-muted mx-2 my-0" style="line-height: 1em;"><small>CivBuddy
+                                Version</small><br><small id="appVersion"></small></p>
                         </div>
                     </li>
                 </ul>
