Add 'funds' page placeholder with navbar

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -67,7 +67,7 @@
                     ></span></a><span id="gameName1" class="d-none d-lg-inline-block"></span></p>
             </div>
             <!-- Item 2: Player -->
-            <div class="col-4 col-md-3 col-lg-2">
+            <div class="col-4 col-md-3 col-lg-2 pl-0">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#"
@@ -85,7 +85,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- Item 2: Number of cards [on SMALL and smaller also: points] -->
+            <!-- Item 3: Number of cards [on SMALL and smaller also: points] -->
             <div class="col-4 col-md-2 col-lg-2">
                 <div class="mb-0 text-nowrap" id="navbarCards">
                     <img class="mr-1" id="navbarCardsIcon" src="img/cards.svg" alt=""><span
@@ -96,14 +96,14 @@
                         class="navbarCurrentPoints">0</span><span class="text-muted navbarPointsTarget">/1400</span>
                 </div>
             </div>
-            <!-- Item 3: Points -->
+            <!-- Item 4: Points -->
             <div class="col-3 col-md-3 col-lg-2 d-none d-md-inline-block">
                 <p class="navbar-brand fix-padding mb-0">
                     <span class="oi oi-target mr-2" aria-hidden="true"></span><span
                      class="navbarCurrentPoints">0</span><span class="text-muted navbarPointsTarget">/1400</span>
                 </p>
             </div>
-            <!-- Item 4: Filter -->
+            <!-- Item 5: Filter -->
             <div class="col-1">
                 <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"
                     onclick="CivBuddy.buttonClick(this, 'cards', 'filter')"><img src="img/eye-active.svg"
@@ -111,14 +111,14 @@
                     class="inline-svg mr-2 navbar-icon-eye d-none" id="eye-closed"><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-filter"></span></a></p>
             </div>
-            <!-- Item 5: Buy -->
+            <!-- Item 6: Buy -->
             <div class="col-2 col-md-1">
                 <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"
                     onclick="CivBuddy.buttonClick(this, 'cards', 'buy')"><span class="oi oi-check mx-2"
                     aria-hidden="true"></span><span class="d-none d-lg-inline-block"
                     data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
-            <!-- Item 6: Drop-down menu and language -->
+            <!-- Item 7: Drop-down menu and language -->
             <div class="col-1 px-0">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
