Add 'funds' page navbar initialization

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -57,9 +57,9 @@
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="oi oi-menu"
                            aria-hidden="true"></span></a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <p class="navbar-brand mx-2 my-0" id="gameName2">TODO gamename</p>
-                            <p class="text-muted mx-2 my-0" id="variantName">TODO variantname</p>
-                            <p class="text-info mx-2 my-0" id="variantOptions">TODO options</p>
+                            <p class="navbar-brand mx-2 my-0" id="gameName2"></p>
+                            <p class="text-muted mx-2 my-0" id="variantName"></p>
+                            <p class="text-info mx-2 my-0" id="variantOptions"></p>
                             <div class="dropdown-divider"></div>
                             <div id="otherLanguageFlags"></div>
                             <a class="nav-link" href="index.html"><span class="oi oi-account-logout mx-2"
