Activate total funds and mining yield displays on 'funds' page

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -63,7 +63,7 @@
             <!-- Item 3: Current value of funds -->
             <div class="col-3">
                 <p class="navbar-brand fix-padding p-0 mb-0 mr-2 navbarFundsValue"><img src="img/funds.svg"
-                    class="mr-2" alt="Funds"><span>120</span></p>
+                    class="mr-2" alt="Funds"><span>0</span></p>
             </div>
             <!-- Item 4: Clear all funds -->
             <div class="col-2 text-left">
@@ -108,7 +108,8 @@
                     <div class="form-check lead noselect mt-3" id="useMiningYield">
                         <label class="form-check-label">
                             <input class="form-check-input" style="margin-top: 8px;" value="" checked=""
-                                type="checkbox"><span data-l10n-id="funds-useMiningYield"></span>
+                                type="checkbox"></input><span data-l10n-id="funds-useMiningYield"
+                                data-l10n-args='{"value":0}'></span>
                         </label>
                     </div>
                 </div>
