Remove funds workaround, activate real 'funds' page

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -204,8 +204,8 @@
                     data-l10n-args='{"fundsCurrent": 30, "fundsAvailable": 120}'></p>
             </div>
             <div class="col-1 funds-icon">
-                <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, 'cards', 'funds')"
-                    ><img class="inline-svg" src="img/funds.svg" alt="Funds"></a>
+                <a class="nav-link add-situation-id" href="funds.html"><img
+                   class="inline-svg" src="img/funds.svg" alt="Funds"></a>
             </div>
         </div>
     </div>
