--- a/resources/funds.html
+++ b/resources/funds.html
@@ -98,7 +98,7 @@
 <!-- List of commodities -->
 <div class="container card-container">
     <div class="row" id="commodityList">
-        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12">
             <div class="card border-primary mb-3">
                 <div class="card-body">
                     <label class="col-form-label col-form-label-lg d-inline-block mr-4" for="inputTreasury"
