Further sassify the styling

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -157,7 +157,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content border-success">
             <div class="modal-header">
-                <h4 class="modal-title">Schauspiel &amp; Poesie</h4>
+                <h4 class="modal-title"></h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
