--- a/resources/cards.html
+++ b/resources/cards.html
@@ -22,7 +22,7 @@
                     <h4 class="card-title">{{ cardTitle }}</h4>{{/isOwned}}
                     <p class="card-text card-status-expl {{ textStyle }} mb-1" data-l10n-id="cards-card-{{ status }}-expl"
                         data-l10n-args='{{ explArgs }}'></p>{{^isOwned}}
-                    <p class="card-text card-credits-info mb-1"></p>
+                    <p class="card-text card-credits-info mb-1 d-none d-md-block"></p>
                     <div style="width: {{ creditBarWidth }}%;">
                         <div class="progress">
                             <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: {{ creditBarOwnedPercent }}%"
@@ -139,7 +139,7 @@
 <!-- List of cards -->
 <div class="container card-container">
     <div class="row" id="cardList">
-        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12 d-none" id="filterHint">
+        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12 d-none mb-3" id="filterHint">
             <div class="card">
                 <div class="card-body">
                     <p class="card-text text-muted" data-l10n-id="cards-filter-active"></p>
