--- a/resources/cards.html
+++ b/resources/cards.html
@@ -20,15 +20,17 @@
                 </div>{{/isOwned}}
                 <div class="card-body">{{#isOwned}}
                     <h4 class="card-title">{{ cardTitle }}</h4>{{/isOwned}}
-                    <p class="card-text card-status-expl {{ textStyle }} mb-1" data-l10n-id="cards-card-{{ status }}-expl"
-                        data-l10n-args='{{ explArgs }}'></p>{{^isOwned}}
+                    <p class="card-text card-status-expl {{ textStyle }} mb-1"
+                        data-l10n-id="cards-card-{{ status }}-expl" data-l10n-args='{{ explArgs }}'></p>{{^isOwned}}
                     <p class="card-text card-credits-info mb-1 d-none d-md-block"></p>
                     <div style="width: {{ creditBarWidth }}%;">
                         <div class="progress">
-                            <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: {{ creditBarOwnedPercent }}%"
-                                aria-valuenow="{{ creditBarOwnedValue }}" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
-                            <div role="progressbar" class="progress-bar bg-success bar-planned d-none" style="width: {{ creditBarPlannedPercent }}%"
-                                aria-valuenow="{{ creditBarPlannedValue }}" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
+                            <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: {{
+                                creditBarOwnedPercent }}%" aria-valuenow="{{ creditBarOwnedValue
+                                }}" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
+                            <div role="progressbar" class="progress-bar bg-success bar-planned d-none" style="width: {{
+                                creditBarPlannedPercent }}%" aria-valuenow="{{ creditBarPlannedValue
+                                }}" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
                         </div>
                     </div>{{/isOwned}}
                 </div>
@@ -37,7 +39,8 @@
     </script>
 
     <script id="groupIconTemplate" type="x-tmpl-mustache">
-        <img src="img/{{ iconName }}.svg" alt="{{ groupName }}" title="{{ groupName }}">
+        <img src="img/{{ iconName }}.svg" {{#inline}}class="inline-svg" {{/inline}}alt="{{ groupName }}" title="{{
+            groupName }}">
     </script>
 
     <script id="cardInfoCreditItemTemplate" type="x-tmpl-mustache">
