Display 5 buttons per row in a commodity

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -21,7 +21,7 @@
     </script>
 
     <script id="commodityButtonTemplate" type="x-tmpl-mustache">
-        <div class="col-3 commodity-pts"><button type="button"
+        <div class="col-5th commodity-pts"><button type="button"
              class="btn {{#selected}}btn-info{{/selected}}{{^selected}}btn-outline-lightgray{{/selected}}"
              onclick="CivBuddy.buttonClick(this, 'funds', 'setCommodity', '{{ commodityId }}', {{ n }})">{{ value
              }}</button></div>
