--- a/resources/funds.html
+++ b/resources/funds.html
@@ -29,6 +29,14 @@
              onclick="CivBuddy.buttonClick(this, 'funds', 'setCommodity', '{{ commodityId }}', {{ n }})">{{ value
              }}</button></div>
     </script>
+
+    <script id="summaryRowTemplate" type="x-tmpl-mustache">
+        <tr class="summary-row-commodity">
+            <th scope="row">{{ commodityName }}</th>
+            <td>{{ n }}</td>
+            <td class="text-right">{{ value }}</td>
+        </tr>
+    </script>
 </head>
 <body>
 
@@ -37,15 +45,14 @@
     <div class="container">
         <div class="row ml-0">
             <!-- Item 1: Link back to 'cards' page -->
-            <div class="col-2 col-md-3 pl-0">
-                <p class="navbar-brand fix-padding mb-0"><a class="nav-action add-situation-id" href="cards.html"><span
+            <div class="col-1 col-md-2 pl-0">
+                <p class="navbar-brand fix-padding mb-0 mx-0"><a class="nav-action add-situation-id" href="cards.html"><span
                     class="oi oi-arrow-thick-left mr-2" aria-hidden="true"
-                    style="position: relative; top: 3px;"></span><img class="mr-1 d-inline-block d-md-none"
-                    id="navbarBack2CardsIcon" src="img/cards.svg" alt=""><span class="d-none d-md-inline-block"
+                    style="position: relative; top: 3px;"></span><span class="d-none d-md-inline-block"
                     data-l10n-id="funds-navbar-back"></span></a></p>
             </div>
             <!-- Item 2: Player -->
-            <div class="col-4 col-md-3">
+            <div class="col-4 col-md-3 pl-0">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#"
@@ -64,18 +71,25 @@
                 </ul>
             </div>
             <!-- Item 3: Current value of funds -->
-            <div class="col-3">
+            <div class="col-3 col-md-2 pr-0">
                 <p class="navbar-brand fix-padding p-0 mb-0 mr-2 navbarFundsValue"><img src="img/funds.svg"
                     class="mr-2" alt="Funds"><span>0</span></p>
             </div>
-            <!-- Item 4: Clear all funds -->
+            <!-- Item 4: Toggle lock/summary -->
+            <div class="col-1 col-md-2">
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" id="summaryButton"
+                    onclick="CivBuddy.buttonClick(this, 'funds', 'toggleSummary')"><span
+                    class="oi oi-lock-unlocked mr-2" aria-hidden="true"></span><span class="d-none d-md-inline-block"
+                    data-l10n-id="funds-navbar-summary"></span></a></p>
+            </div>
+            <!-- Item 5: Clear all funds -->
             <div class="col-2 text-left">
                 <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"
                     onclick="CivBuddy.buttonClick(this, 'funds', 'clear')"><span class="oi oi-x mr-2"
                     aria-hidden="true"></span><span class="d-none d-md-inline-block"
                     data-l10n-id="funds-navbar-clear"></span></a></p>
             </div>
-            <!-- Item 5: Drop-down menu and language -->
+            <!-- Item 6: Drop-down menu and language -->
             <div class="col-1 px-0">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
@@ -116,6 +130,49 @@
                                 data-l10n-args='{"value":0}'></span>
                         </label>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row d-none" id="fundsSummary">
+        <div class="col-12 offset-md-3 col-md-6">
+            <div class="card border-primary mb-3">
+                <div class="card-header"><h4 class="card-title m-0" data-l10n-id="funds-summary-title"></h4></div>
+                <div class="card-body">
+                    <table class="table mb-0">
+                        <thead>
+                            <tr class="table-active">
+                                <th scope="col" data-l10n-id="funds-summary-head-item"></th>
+                                <th scope="col" data-l10n-id="funds-summary-head-numCards"></th>
+                                <th scope="col" data-l10n-id="funds-summary-head-value" class="text-right"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row" data-l10n-id="funds-summary-treasury"></th>
+                                <td>&nbsp;</td>
+                                <td class="text-right">0</td>
+                            </tr>
+                            <tr class="summary-mining-bonus">
+                                <th scope="row" data-l10n-id="funds-summary-miningBonus"></th>
+                                <td data-l10n-id="funds-summary-miningBonusUnused">-</td>
+                                <td class="text-right">0</td>
+                            </tr>
+                            <tr class="funds-total">
+                                <th scope="row" data-l10n-id="funds-summary-total"></th>
+                                <td>0</td>
+                                <td class="text-success font-weight-bold text-right">0</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-success add-situation-id" href="cards.html" role="button"><span
+                        class="oi oi-arrow-thick-left mr-2" aria-hidden="true"></span><span
+                        data-l10n-id="funds-summary-footer-back"></span></a>
+                    <button type="button" onclick="CivBuddy.buttonClick(this, 'funds', 'toggleSummary')"
+                        class="btn btn-success float-right"><span class="oi oi-lock-unlocked mr-2"
+                        aria-hidden="true"></span><span data-l10n-id="funds-summary-footer-unlock"></span></button>
                 </div>
             </div>
         </div>
