Fix funds values in Situation after funds update

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -87,18 +87,21 @@
             <div class="col-4 col-md-2 col-lg-2">
                 <div class="mb-0 text-nowrap" id="navbarCards">
                     <img class="mr-1" id="navbarCardsIcon" src="img/cards.svg" alt=""><span
-                        class="navbarCurrentNumCards">8</span><span class="text-muted navbarMaxCards">/11</span>
+                        class="navbarCurrentNumCards">0</span><span
+                        class="text-muted navbarMaxCards"><!-- includes slash --></span>
                 </div>
                 <div class="mb-0 text-nowrap d-inline-block d-md-none">
                     <span class="oi oi-target mr-2" aria-hidden="true"></span><span
-                        class="navbarCurrentPoints">0</span><span class="text-muted navbarPointsTarget">/1400</span>
+                        class="navbarCurrentPoints">0</span><span
+                        class="text-muted navbarPointsTarget"><!-- includes slash --></span>
                 </div>
             </div>
             <!-- Item 4: Points -->
             <div class="col-3 col-md-3 col-lg-2 d-none d-md-inline-block">
                 <p class="navbar-brand fix-padding mb-0">
                     <span class="oi oi-target mr-2" aria-hidden="true"></span><span
-                     class="navbarCurrentPoints">0</span><span class="text-muted navbarPointsTarget">/1400</span>
+                        class="navbarCurrentPoints">0</span><span
+                        class="text-muted navbarPointsTarget"><!-- includes slash --></span>
                 </p>
             </div>
             <!-- Item 5: Filter -->
