Move v1 docs to their own 'v1' page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ This is not a computer game, but a helper application for the board game. In lat
 - It can be taught to know your house rules (within limits)
 - Three game variants already supported ([original](https://boardgamegeek.com/boardgame/71/civilization) (1980), [with western expansion](https://boardgamegeek.com/boardgameexpansion/2058/civilization-western-extension-map) (1988), and [advanced](https://boardgamegeek.com/boardgameexpansion/177/advanced-civilization) (1991))
 
-**[Click here]({{ site.appurl }})** to start using {{ site.name }} right now! It's free.
+**[Click here]({{ site.appurl_v2 }})** to start using {{ site.name }} right now! It's free.
 Pro Tip: Talk to your fellow players beforehand, and get them all to agree on using {{ site.name }}.
 
 ## Development Setup
